# EIP-7732

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: rust-ci.yml
docs/: architecture.md  resources.md  spec_gaps.md
examples/builder_sim/: main.rs
examples/cli/: main.rs
examples/ptc_sim/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bid.rs  fuzz_envelope.rs
src/: lib.rs
src/beacon_chain/: constants.rs  containers.rs  mod.rs  process_payload_attestation.rs  process_payload_bid.rs  registry.rs  types.rs  withdrawals.rs
src/builder/: bid.rs  envelope.rs  guide.rs  mod.rs
src/fork_choice/: handlers.rs  store.rs
src/p2p/: mod.rs  topics.rs
src/utils/: crypto.rs  mod.rs  ssz.rs
tests/integration/: epbs_flow_test.rs
tests/unit/: beacon_chain_test.rs  builder_test.rs  fork_choice_test.rs  registry_test.rs
