[package]
name    = "eip-7732"
version = "0.1.0"
edition = "2021"
description = "EIP-7732 — Enshrined Proposer-Builder Separation (ePBS) reference implementation"
license = "Apache-2.0"
repository = "https://github.com/EIPs-CodeLab/EIP-7732"
keywords   = ["ethereum", "eip-7732", "epbs", "consensus", "builder"]
# PR #1: BLS signing roots and verification wiring

[[bin]]
name = "epbs-cli"
path = "examples/cli/main.rs"

[[example]]
name = "builder_sim"
path = "examples/builder_sim/main.rs"

[[example]]
name = "ptc_sim"
path = "examples/ptc_sim/main.rs"

[dependencies]
ssz_types   = "0.6"
blst        = "0.3"
sha2        = "0.10"
hex         = "0.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest    = "1"
criterion   = "0.5"

[profile.release]
opt-level = 3
lto       = true
